test-nginx-server-netpol/test-nginx-server-netpol-denyall.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: test-nginx-server
spec:
  podSelector:
    matchLabels:
      app: nginx-server
  policyTypes:
  - Egress
  - Ingress
  ingress: []
  egress: []
