test-nginx-server-netpol/test-nginx-server-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-whitelist
  namespace: test-nginx-server
spec:
  podSelector:
    matchLabels:
      app: nginx-server
  policyTypes:
  - Egress
  - Ingress
  ingress: 
  - from:
    - podSelector:
        matchLabels:
          app: netshoot
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
